  - fixed bug in float to integer SSE/SSE2 convert instructions
  - fixed BCD instructions implementation
  - execution speed improvements (sshwarts and psychosmur)
  - fix MSR_APICBASE always returning APIC ADDRESS 0 (Kangmo Kim)
  - fetchdecode fixes for AMD64 and 3DNow!
  - change BX_PANIC messages to BX_INFO when behaviour exactly 
    matches Intel docs
  - fixed using invalid segment register for MOV instruction (h.johansson)
  - fixed ET bit mismatch between CR0 and SMSW instruction
  - fixed possible simulator #DIVZERO fault when executing IDIV instruction
  - fixed undocumented flags handling for BTS, BTR, SHR, MUL and IMUL
    instructions (Stanislav Shwartsman)
  - fixed CF flag handling for SHL instruction in x86-64 mode
    (Stanislav Shwartsman)
  - added missed GP(0) exception when loading incorrect flags combination 
    to CR0 (Stanislav Shwartsman)
  - implemented CR8 register (aliased to APIC.TPR[7:4]) in x86-64 mode

- FPU
  - totally rewritten all FPU code based on softfloat library 
    (Stanislav Shwartsman)
  - significantly improved accuracy of all floating point
    instructions.
  - implemented all missed P6 and PNI floating point instructions.
  - hundreds of bug fixes in FPU code.

  TODO:
    ! Unmasked underflow/overflow should correct the result 
      by magic number for all operations, including float32 
      and float64.

- APIC (Zwane Mwaikambo)
  - APIC arbitration
  - Processor priority
  - Various interrupt delivery fixes
  - Focus processor checking
  - ExtINT delivery

- Disassembler
  - fixed MOV opcode 0x88, had exchanged the operands (h.johansson)
  - fixed MOV opcode 0xA3, had wrong operand size (h.johansson)
  - fixed BOUND opcode 0x62 (Stanislav)
  - fixed CALLW opcode 0xFF /3 and JMPW opcode 0xFF /5 (Stanislav)
  - fixed INS opcode 0x6D, had wrong operand size (Stanislav)

- I/O devices
  - general
    - handle cpu reset through port 0x92
    - new memory handler API for PCI i/o and memory handling (Frank Cornelis)